# zvec-rust

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_CN.md  SECURITY.md
.github/workflows/: build-prebuilt.yml  ci.yml  fuzz.yml  nightly-coverage.yml  publish-crates.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_collection.rs  fuzz_doc.rs  fuzz_query.rs  fuzz_schema.rs  fuzz_types.rs
scripts/: coverage.sh
zvec/: Cargo.toml
zvec-sys/: Cargo.toml  README.md  build.rs
zvec-sys/src/: lib.rs
zvec/benches/: zvec_bench.rs
zvec/examples/: basic.rs  config_logging.rs  crud_operations.rs  schema_builder.rs  vector_search.rs
zvec/src/: collection.rs  config.rs  doc.rs  error.rs  lib.rs  multi_query.rs  query.rs  schema.rs  types.rs
zvec/tests/: fts_no_vector_test.rs  integration_test.rs  string_filter_test.rs
