[package]
name = "zvec-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to the zvec C-API"
readme = "README.md"
links = "zvec_c_api"
keywords = ["ffi", "vector-database", "zvec", "bindings"]
categories = ["external-ffi-bindings", "database"]

[build-dependencies]
